cite/test/tests/ui/fail/changed_content_error.stderr
error: Citation content has changed!
         Referenced: old content
         Current: new content
 --> tests/ui/fail/changed_content_error.rs:5:1
  |
5 | #[cite(mock, changed = ("old content", "new content"), level = "ERROR")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `cite` (in Nightly builds, run with -Z macro-backtrace for more info)
